# DALF_Simulator

./: .gitignore  1xA100gpu.sh  1xH100gpu.sh  base_cluster.sh  finetune_sim.sh  mask.sh  pyproject.toml  results.txt  run_dalf.py  test.py  train.py  train_cluster.sh  train_finetune_desurt.sh  train_finetune_simulator.sh  train_from_scratch_simulator.sh  train_kinect2.sh
eval/: any.sh  dalf_benchmark.py  eval_nonrigid.sh  eval_tfeat.sh  extract_gt.py  vis_matches.py
modules/: utils.py
modules/dataset/: desurt.py  make_masks.py  real.py  simulation.py
modules/models/: DALF.py
weights/: model_ts-fl_simulation.pth  model_ts-fl_simulation_35K.pth
