[project]
name = "dalf-simulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "kornia==0.6.8",
    "matplotlib==3.6.2",
    "notebook>=7.4.5",
    "numpy==1.23.4",
    "opencv-contrib-python-headless>=4.7.0.72",
    "opencv-python-headless>=4.7.0.72",
    "scipy==1.10.1",
    "torch==1.12",
    "torchvision==0.13",
    "tqdm>=4.67.1",
]
